ui/ops[part]: fix menu classes used to increase contrast between dark layers

--- a/ui/conductor/src/style.scss
+++ b/ui/conductor/src/style.scss
@@ -75,9 +75,9 @@ Also center the text when it's small
 }
 
 // increase the contrast between dark card based menus and their background
-.v-menu__content.theme--dark {
-  > .v-card.theme--dark,
-  > .v-list.theme--dark {
+.v-theme--dark > .v-overlay__content {
+  > .v-card.v-theme--dark,
+  > .v-list.v-theme--dark {
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-top-color: rgba(255, 255, 255, 0.25);
   }
